# sqlpilot

./: .gitignore  AGENTS.md  autocomplete.py  create_tokenizer.py  local_functions.py  main.py  modal_train.py  pyproject.toml  requirements.txt
data/: topic_detail.json  topics.json
data/detail_tables/0_e-commerce/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/detail_tables/10_online_retail/: 0.json  1.json  (+8 more)
data/tables/: 0_e-commerce.json  15_government.json  16_real_estate.json  18_manufacturing.json  19_research.json  1_healthcare.json  20_e-learning.json  21_entertainment.json  22_transportation.json  23_energy.json  24_agriculture.json  26_utilities.json  27_retail.json  28_pharmaceutical.json  29_automotive.json  30_legal.json  32_security.json  33_media.json  34_travel.json  35_construction.json  36_nonprofit.json  39_food_and_beverage.json  3_customer_relationship_management.json  42_art.json  43_music.json  45_telemedicine.json  47_cloud_computing.json  48_saas.json  49_machine_learning.json  4_finance.json  50_iot.json  51_blockchain.json  52_augmented_reality.json  53_cybersecurity.json  54_personal_finance.json  55_data_science.json  56_healthtech.json  57_fintech.json  59_education_technology.json  5_education.json  (+21 more)
datagen/: main.py  modal_datagen.py  vllm_server.py
hugtrain/: autocomplete.py  create_tokenizer.py  main.py  test_eval.py
hugtrain/tokenizer/: tokenizer.json
web/: README.md  index.html
web/model/: .gitkeep  config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json
(+63517 files in other folders)
