[tool.poetry]
name = "sqlpilot"
version = "0.1.0"
description = ""
authors = ["Peyton Walters <peyton@cockroachlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
instructor = "^0.5.2"
transformers = "^4.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
